[package]
name = "ziweidoushu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.27.0"
inquire = { version = "0.6.2", features = ["date"] }
lazy_static = "1.4.0"
lunardate = "0.2"
rust-ephemeris = { git = "https://github.com/tyxk8160/ephemeris.git", branch = "master" }
tui = "0.19.0"
